After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 643716 - v4l2src: fails to build with newer kernels: ./v4l2_calls.h:33: fatal error: linux/videodev.h: No such file or directory
v4l2src: fails to build with newer kernels: ./v4l2_calls.h:33: fatal error: l...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal blocker
: 0.10.28
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-02 20:08 UTC by Luca Ferretti
Modified: 2011-08-24 04:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Luca Ferretti 2011-03-02 20:08:18 UTC
It seems here are some configure/build issue when (I'm experiencing them in jhbuild on ubuntu 10.10) libv4l-dev is not installed

Basically the build system ignores libv4l-dev is not available and tries to build the related plugin, failing.

Here is related CFLAG values then libv4l-dev is not installed

betatester@turnip:~/Source/gnome3/gst-plugins-good$ grep LIBV4L2_CFLAGS *
config.log:ac_cv_env_LIBV4L2_CFLAGS_set=
config.log:ac_cv_env_LIBV4L2_CFLAGS_value=
config.log:LIBV4L2_CFLAGS=''
config.status:S["LIBV4L2_CFLAGS"]=""
configure:LIBV4L2_CFLAGS
configure:LIBV4L2_CFLAGS
configure:  LIBV4L2_CFLAGS
configure:    if test -n "$LIBV4L2_CFLAGS"; then
configure:        pkg_cv_LIBV4L2_CFLAGS="$LIBV4L2_CFLAGS"
configure:  pkg_cv_LIBV4L2_CFLAGS=`$PKG_CONFIG --cflags "libv4l2" 2>/dev/null`
configure:	LIBV4L2_CFLAGS=$pkg_cv_LIBV4L2_CFLAGS
Makefile:LIBV4L2_CFLAGS = 
Makefile.in:LIBV4L2_CFLAGS = @LIBV4L2_CFLAGS@


Here the related build failure.

/bin/bash ../../libtool  --tag=CC --tag=disable-static  --mode=compile gcc -std=gnu99 -DHAVE_CONFIG_H -I. -I../..    -pthread -I/opt/gnome3/include/gstreamer-0.10 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include -I/opt/gnome3/include/libxml2   -pthread -I/opt/gnome3/include/gstreamer-0.10 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include -I/opt/gnome3/include/libxml2   -pthread -I/opt/gnome3/include/gstreamer-0.10 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include -I/opt/gnome3/include/libxml2   -I../../gst-libs -pthread -I/opt/gnome3/include/gstreamer-0.10 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include -I/opt/gnome3/include/libxml2    -DG_THREADS_MANDATORY -DG_DISABLE_DEPRECATED -Wall -Wdeclaration-after-statement -Wvla -Wpointer-arith -Wmissing-declarations -Wmissing-prototypes -Wredundant-decls -Wwrite-strings -Wold-style-definition -Winit-self -Wmissing-include-dirs -Waddress -Wno-multichar -Wnested-externs -Werror  -g   -DGST_DISABLE_DEPRECATED   -pthread -I/opt/gnome3/include/gudev-1.0 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include   -g -O2 -MT libgstvideo4linux2_la-gstv4l2.lo -MD -MP -MF .deps/libgstvideo4linux2_la-gstv4l2.Tpo -c -o libgstvideo4linux2_la-gstv4l2.lo `test -f 'gstv4l2.c' || echo './'`gstv4l2.c
libtool: compile:  gcc -std=gnu99 -DHAVE_CONFIG_H -I. -I../.. -pthread -I/opt/gnome3/include/gstreamer-0.10 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include -I/opt/gnome3/include/libxml2 -pthread -I/opt/gnome3/include/gstreamer-0.10 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include -I/opt/gnome3/include/libxml2 -pthread -I/opt/gnome3/include/gstreamer-0.10 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include -I/opt/gnome3/include/libxml2 -I../../gst-libs -pthread -I/opt/gnome3/include/gstreamer-0.10 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include -I/opt/gnome3/include/libxml2 -DG_THREADS_MANDATORY -DG_DISABLE_DEPRECATED -Wall -Wdeclaration-after-statement -Wvla -Wpointer-arith -Wmissing-declarations -Wmissing-prototypes -Wredundant-decls -Wwrite-strings -Wold-style-definition -Winit-self -Wmissing-include-dirs -Waddress -Wno-multichar -Wnested-externs -Werror -g -DGST_DISABLE_DEPRECATED -pthread -I/opt/gnome3/include/gudev-1.0 -I/opt/gnome3/include/glib-2.0 -I/opt/gnome3/lib64/glib-2.0/include -g -O2 -MT libgstvideo4linux2_la-gstv4l2.lo -MD -MP -MF .deps/libgstvideo4linux2_la-gstv4l2.Tpo -c gstv4l2.c  -fPIC -DPIC -o .libs/libgstvideo4linux2_la-gstv4l2.o
In file included from ./gstv4l2bufferpool.h:29,
                 from gstv4l2src.h:28,
                 from gstv4l2.c:34:
./v4l2_calls.h:33: fatal error: linux/videodev.h: No such file or directory
compilation terminated.
Comment 1 Tim-Philipp Müller 2011-03-02 22:45:30 UTC
Presumably the kernel headers are from a quite recent kernel?

Does it work for yo uas well if you just remove the #include <linux/videodev.h> ?
Comment 2 Tim-Philipp Müller 2011-03-03 17:43:06 UTC
Please re-open if this doesn't fix it:

commit 0cd62a10ad471601b9dc5420de8548fe21d25e9f
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Thu Mar 3 00:16:47 2011 +0000

    v4l2: remove unnecessary linux/videodev.h include
    
    Causes compilation issues with newer kernel headers where the old
    v4l interface has been removed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=643716